# cv_writer

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  job.txt  pyproject.toml
.cursor/plans/: cv-optimizer-prd-86d2038b.plan.md
examples/: README.md  example_cv_draft.md  example_job_description.txt
src/cv_writer/: __init__.py  main.py
src/cv_writer/config/: __init__.py  config_loader.py  cv_optimizer.yaml
src/cv_writer/crews/: __init__.py
src/cv_writer/crews/reviewer_crew/: __init__.py  reviewer_crew.py
src/cv_writer/crews/reviewer_crew/config/: agents.yaml  tasks.yaml
src/cv_writer/crews/translator_crew/: __init__.py  translator_crew.py
src/cv_writer/crews/translator_crew/config/: agents.yaml  tasks.yaml
src/cv_writer/crews/writer_crew/: __init__.py  writer_crew.py
src/cv_writer/crews/writer_crew/config/: agents.yaml  tasks.yaml
src/cv_writer/flows/: __init__.py  cv_optimization_flow.py
src/cv_writer/models/: __init__.py  state_models.py
src/cv_writer/tools/: __init__.py  document_parser.py  pdf_reader.py  web_scraper.py
src/cv_writer/utils/: __init__.py  file_handler.py  llm_factory.py
tests/: __init__.py  test_config_loader.py  test_document_parser.py  test_file_handler.py  test_llm_factory.py  test_state_models.py  test_translator_crew.py
